force-app/main/default/objects/vlocity_cmt__FulfilmentRequestLineDecompRelationship__c/fields/vlocity_cmt__DestinationFulfilmentRequestLineId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DestinationFulfilmentRequestLineId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DestinationFulfilmentRequestLineId</description>
    <inlineHelpText>DestinationFulfilmentRequestLineId</inlineHelpText>
    <label>Destination Fulfilment Request Line</label>
    <referenceTo>vlocity_cmt__FulfilmentRequestLine__c</referenceTo>
    <relationshipLabel>Source Decomposition Relationships</relationshipLabel>
    <relationshipName>SourceDecompositionRelationships</relationshipName>
    <type>Lookup</type>
</CustomField>